     filter, meaning they accept all the possible keys of [filter_location]
   * [store_villages] must now use owner_side= instead of side=
   * replace [own_village] with macro {OWN_VILLAGE X Y SIDE}
   * new conditional tag [have_location], tests true if any location passes
     the standard location filter provided inside the tag
 * user interface:
   * fixed incorrect active flag in the satus bar when using custom flag
   * restore a lost feature : if acceleration is on, pressing shift uses normal speed
 * WML tools and scripts:
   * New tool, wescamp_import, automates the shuffling of translation
     files and textdomain strings need to import a comapigh from WesCamp
     to mainline.
   * New tool, change_textdomain, makes it easy to change the name of UMC
     after import to mainline.
 * Miscellaneous and bugfixes
   * 1.2 savegames are no longer compatible and thus not loaded
   * fixed a crash if an invalid scenario was loaded (bug #9049)

Version 1.3.2:
 * campaigns
   * Heir to the Throne
     * In Home of the North Elves, Eonihar the rider will join you permanently
       and the other riders that find you will be controlled by the AI
     * updated images for Delfador
     * made the narrator talk about gryphons at the end of Northern Winter only
       if the player has actually gotten the eggs
   * Tutorial
     * merged all unit images used in the tutorial from httt
     * increased number of turns from 20 to 26 in the 2nd scenario
   * made some units not appear in the unit help anymore (invisible helper
     units, duplicate desert elves and such)
   * The South Guard
     * better placement and duration of story images
     * graphical enhancements including a new ethiliel portrait
     * added 'Ruffian' an L0 outlaw to give the player something easy to kill.
   * Under the Burning Suns
     * Scenario 3: Made orc ambush happen on a random turn
   * Northern Rebirth
     * Version 18.6 merged in from WesCamp.
 * graphics