@@ -23,6 +23,7 @@ Version 1.3.2+svn:
    * replace [own_village] with macro {OWN_VILLAGE X Y SIDE}
    * new conditional tag [have_location], tests true if any location passes
      the standard location filter provided inside the tag
+   * now the standard location filter supports [and] and [or] tags
  * user interface:
    * fixed incorrect active flag in the satus bar when using custom flag
    * restore a lost feature : if acceleration is on, pressing shift uses normal speed
